linked the  CSS to the HTML

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Laila&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="src/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
     <nav class="navbar fixed-top" style="background-color: #f1ccf7;">
