--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="src/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
     <nav class="navbar fixed-top" style="background-color: #f1ccf7">
