--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description"  content="SheCodes Responsive Tutorial: Week 3" />
     <title>Advanced bootstrap</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -70,7 +71,7 @@
           <img src="images/yoga.png" class="img-fluid shadow p-3 w-100 rounded mb-5 alt=Yoga image"/>
       </div>
       <div class="col-sm-4">
-          <img src="images/weather1.png" class="img-fluid shadow p-3 w-200 rounded mb-5 alt=Weather image"/>
+          <img src="images/weather.png" class="img-fluid shadow p-3 w-200 rounded mb-5 alt=Weather image"/>
       </div>
       <div class="col-sm-4">
           <img src="images/yogurt.png" class="img-fluid shadow p-3 w-100 rounded mb-5 alt=Yogurt image"/>
