--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="SheCodes Responsive Tutorial: Week 3" />
     <title>Advanced bootstrap</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -108,7 +109,7 @@
           </div>
         </div>
         <div class="col-md-6">
-          <img src="images/weather1.png" class="img-fluid rounded mt-5" />
+          <img src="images/weather.png" class="img-fluid rounded mt-5" />
         </div>
       </div>
 
